Fixed z-index for popover

--- a/core/app/assets/stylesheets/widgets/popups/popover.css.less
+++ b/core/app/assets/stylesheets/widgets/popups/popover.css.less
@@ -5,7 +5,7 @@
 @arrow-pointy-side: 11px;
 
 .popover-container {
-  z-index: @max-z-index;
+  z-index: 119;
   position: relative;
   background: #fff;
 
